--- a/hayashi_temma/src/main/resources/application.properties
+++ b/hayashi_temma/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.mvc.hiddenmethod.filter.enabled=true
+server.servlet.context-path=/hayashi_temma
